# AlphaForge

./: .gitattributes  implementation-tracking.yml  main.py  pyproject.toml  synthetic-data-elimination-strategy.yml  test_complexity_management.py  test_crypto_integration.py  test_microstructure_integration.py  train_AFF.py  train_DSO.py  train_RL.py
alphagen/rl/: policy.py
alphagen/rl/env/: core.py  wrapper.py
alphagen/utils/: random.py
alphagen_generic/: features.py
alphagen_qlib/: alphalens_integration.py  complexity_manager.py  crypto_data.py  stock_data.py
crypto_data/ADAUSDT/: binance_spot_ADAUSDT-1d_20240101-20240131_v2.5.0.metadata.json
crypto_data/BTCUSDT/: binance_spot_BTCUSDT-1d_20240101-20240131_v2.5.0.metadata.json
crypto_data/ETHUSDT/: binance_spot_ETHUSDT-1d_20240101-20240131_v2.5.0.metadata.json
data_collection/: fetch_crypto_data.py
dso/: core.py  train.py
dso/policy/: policy.py
dso/policy_optimizer/: policy_optimizer.py
dso/task/regression/: crypto_alpha_dataset.py
gan/utils/: data.py
milestones/: 2025-09-17-cryptocurrency-microstructure-integration.yaml  2025-09-17-linux-gpu-compatibility-framework-modernization.yaml  2025-09-17-temporal-violations-remediation.yaml  2025-09-18-synthetic-data-elimination-dso-integration.yaml
